--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "argon2": "^0.28.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3"
   },
   "lint-staged": {
